# cvbot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  cvbot.py  cvpartner-api.yml  pyproject.toml  requirements-frozen.txt  requirements.txt
.github/workflows/: build.yaml
.run/: cvbot.run.xml
.streamlit/: config.toml
scienta/: cv_db.py  openai_functions.py
scienta/cvpartner_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
scienta/cvpartner_api/api/: __init__.py  default_api.py
scienta/cvpartner_api/models/: __init__.py  certification.py  country.py  course.py  cv.py  cv_list.py  cv_list_entry.py  cv_section.py  cv_section_properties.py  cv_summary.py  education.py  image_url.py  key_qualification.py  language.py  office.py  position.py  presentation.py  project_experience.py  project_role.py  recommendation.py  search_by_name_req.py  technology.py  user.py  user_image.py  work_experience.py
